--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <p>Testing Portfolio</p>
+    <p>Testing Portfolio Deploy</p>
     
 </body>
 </html>
